Fixed selection bug
Fixed an extra space being added to the selection when trying to triple click a stream link from the responses page

--- a/style.css
+++ b/style.css
@@ -20,6 +20,13 @@ button {
 button:hover {
   background-color: #606060
 }
+#name{
+  font-weight: bold;
+  padding-bottom: 0px;
+}
+#stream {
+  padding-bottom: 23px;
+}
 #response {
   padding-top: 70px;
   text-align: center;
